revisi kenapa memilih kami index.html

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
       <div class="text-center md:text-left">
         <h2 class="text-3xl font-semibold mb-4">Kenapa Memilih Kami?</h2>
         <p class="text-lg leading-relaxed">
-          Dengan lokasi premium di Cisitu Lama, Ddago - Bandung, kami menghadirkan clusteer rumah kost "Dago Living" dengan unit terbatas hanya 16 unt di atas tanah 3.000 m2. 
-          Lokasi kami berddekatan dengan ITB,  UNPAD, UNPAR, & Universitas Maranatha. Dengan potensi penyewa kost sebanyak 13.000 orang dan lokasi yang sangat dekat dnegan kampus, kami yakin investor properti kami akan mendapat actiive income yang baik dan stabil.
+          Dengan lokasi premium di Cisitu Lama, Ddago - Bandung, kami menghadirkan cluster rumah kost "Dago Living" dengan unit terbatas hanya 16 unt di atas tanah 3.000 m2. 
+          Lokasi kami berdekatan dengan ITB,  UNPAD, UNPAR, & Universitas Maranatha. Dengan potensi penyewa kost sebanyak 13.000 orang dan lokasi yang sangat dekat dengan kampus, kami yakin investor properti kami akan mendapat active income yang baik dan stabil.
           Mencapai 350 juta s/d 540 jt/Tahun dengan harga sewa (Estimasi 3.000.000/bulan)
         </p>
       </div>
