--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             </tr>
             <tr>
               <td class="border px-4 py-2">Dinding</td>
-              <td class="border px-4 py-2">Bata / Celcon diplester</td>
+              <td class="border px-4 py-2">Bata / Hebel / Celcon diplester dan di cat</td>
             </tr>
             <tr>
               <td class="border px-4 py-2">Plafond</td>
@@ -304,7 +304,7 @@
             </tr>
             <tr>
               <td class="border px-4 py-2">Air</td>
-              <td class="border px-4 py-2">Submersible Pump</td>
+              <td class="border px-4 py-2">Air Sumur - Submersible Pump</td>
             </tr>
             <tr>
               <td class="border px-4 py-2">Kusen</td>
