--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <p class="text-lg leading-relaxed">
           Dengan lokasi premium di Cisitu Lama, Ddago - Bandung, kami menghadirkan cluster rumah kost "Dago Living" dengan unit terbatas hanya 16 unt di atas tanah 3.000 m2. 
           Lokasi kami berdekatan dengan ITB,  UNPAD, UNPAR, & Universitas Maranatha. Dengan potensi penyewa kost sebanyak 13.000 orang dan lokasi yang sangat dekat dengan kampus, kami yakin investor properti kami akan mendapat active income yang baik dan stabil.
-          Mencapai 350 juta s/d 540 jt/Tahun dengan harga sewa (Estimasi 3.000.000/bulan)
+          Mencapai 350 juta s/d 540 jt per-Tahun dengan harga sewa (Estimasi 3.000.000/bulan)
         </p>
       </div>
     </div>
